# autonomous_bif

./: README.md
bif/: CMakeLists.txt  ds_derivatives.cpp  ds_derivatives.hpp  ds_func.cpp  ds_func.hpp  dynamical_system.cpp  dynamical_system.hpp  main.cpp  newton.cpp  rossler_pd.json  runge_kutta.cpp  sys_func.cpp
bif/cmake-tree/: CMakeLists.txt
bif/cmake-tree/include/: dynamical_system.hpp  essential.hpp  newton.hpp  sys_common.hpp
bif/cmake-tree/src/: dynamical_system.cpp  essential.cpp  main.cpp  newton.cpp  newton_obj_funcs.cpp  ode_solver.cpp  sys_func.cpp
bif/input/: bvp_fix.json  coupled_FN.json  rossler_pd1.json  sprott_ns.json
bif/pd/: ds_func.cpp  ds_func.hpp  dynamical_system.cpp  dynamical_system.hpp  eigensolver.hpp  main.cpp  newton.cpp  rossler_pd1.json  rossler_pd2.json  runge_kutta.hpp  sys_func.cpp
bif_g/: CMakeLists.txt  ds_func.cpp
bif_ns/: ds_derivatives.cpp  ds_derivatives.hpp  ds_func.cpp  ds_func.hpp  dynamical_system.cpp  dynamical_system.hpp  eigensolver.cpp  eigensolver.hpp  newton.cpp  sprott_ns.json  sprott_pd.json
bif_pd/: dynamical_system.cpp  dynamical_system.hpp  eigensolver.cpp  main.cpp  newton.cpp
cgen/: cgen.py
fix/: CMakeLists.txt  ds_derivatives.cpp  ds_derivatives.hpp  ds_func.cpp  ds_func.hpp  dynamical_system.cpp  dynamical_system.hpp  eigensolver.cpp  main.cpp  newton.cpp  sprott_fix.json  sys_common.hpp
pp/: pp.py  rossler_fix.json
pp/cmake-tree/: CMakeLists.txt
pp/input/: bvp_fix.json  (+3 more)
pp_qt/: dynamical_system.cpp  dynamical_system.hpp  main.pro  mainwindow.cpp  mainwindow.h  rossler_pd.json
(+50 files in other folders)
